Revision history for Perl extension URI::db.

0.13

0.12  2014-01-10T17:23:35Z
      - Eliminated "v-string in use/require non-portable" warning on older
        Perls.

0.11  2014-01-03T20:01:01Z
      - Fixed URI::oracle to properly generate a DBI DSN with no host name or
        port.
      - The `dbi_dsn()` method in URI::sqlserver (and its subclasses) now
        generates a DSN using DBD::Sybase, rather than DBD::ODBC.

0.10  2013-12-20T00:16:30Z
      - Initial version.