@@ -1,0 +1,5 @@
+package URI::pgxc;
+use base 'URI::pg';
+our $VERSION = '0.13';
+
+1;
