@@ -55,7 +55,19 @@ for my $spec (
         qry => [ foo => 1, foo => 2, lol => 'yes' ],
     },
     {
+        uri => 'db:postgresxc://foo:123/try?foo=1&foo=2&lol=yes',
+        dsn => 'dbi:Pg:host=foo;port=123;dbname=try;foo=1;foo=2;lol=yes',
+        dbi => [ [host => 'foo'], [port => 123], [dbname => 'try'] ],
+        qry => [ foo => 1, foo => 2, lol => 'yes' ],
+    },
+    {
         uri => 'db:pgsql://foo:123/try?foo=1&foo=2&lol=yes',
+        dsn => 'dbi:Pg:host=foo;port=123;dbname=try;foo=1;foo=2;lol=yes',
+        dbi => [ [host => 'foo'], [port => 123], [dbname => 'try'] ],
+        qry => [ foo => 1, foo => 2, lol => 'yes' ],
+    },
+    {
+        uri => 'db:pgxc://foo:123/try?foo=1&foo=2&lol=yes',
         dsn => 'dbi:Pg:host=foo;port=123;dbname=try;foo=1;foo=2;lol=yes',
         dbi => [ [host => 'foo'], [port => 123], [dbname => 'try'] ],
         qry => [ foo => 1, foo => 2, lol => 'yes' ],
